# obfuscator

./: .flake8  .gitignore  .prospector.yaml  .travis.yml  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  main.py  obfuscator.sh  pyproject.toml  requirements.txt  setup.py
obfuscator/: main.py  pyproject.toml  setup.py
obfuscator/detectors/: detectors.py  scrubber.py
obfuscator/obfuscator/: main.py
obfuscator/obfuscator/detectors/: detectors.py  scrubber.py
obfuscator/obfuscator/tests/: runner.py  test_main_argsparse.py  test_utils.py
obfuscator/strategy/: abs_file_splitter.py  base_spliter.py  enums.py  exceptions.py  file_splitter.py  generic_hybrid.py  hybrid.py  hybrids.py  low_level.py  split_and_merge.py  split_in_place.py  utils.py  workers.py  workers_pool.py
obfuscator/tests/: requirements.txt  runner.py  test_inplace.py  test_main_argsparse.py  test_regex.py  test_utils.py  test_workers_pool.py
src/: .flake8  main.py  runner.py  utils.py
src/detectors/: detectors.py  scrubber.py
src/strategy/: abs_file_splitter.py  obfuscate_inplace.py  obfuscate_sam.py  obfuscate_sap.py  workers_pool.py
src/tests/: test_main_argsparse.py  test_regex.py  test_utils.py  test_workers_pool.py
strategy/: abs_file_splitter.py  obfuscate_inplace.py  obfuscate_sam.py  obfuscate_sap.py  utils.py
tests/: runner.py  test_inplace.py  test_main_argsparse.py  test_regex.py  test_utils.py  test_workers_pool.py
tests/func/: sanity.py
tests/logs_dir/a2/: file_in_a2
tests/raw_files/: f
tests/unit/: _test_utils.py  test_main_argsparse.py  test_regex.py  test_utils.py  test_workers_pool.py
