[project]
name = "Obfuscator"
license = {file = "LICENSE.txt"}

maintainers = [
    {name = "Bhaa Shakur", email = "bhaa.shakur@gmail.com"},
]

dependencies = [
    "scrubadub",
    "in-place",
    "isort[requirements_deprecated_finder,pipfile_deprecated_finder]",
    "black",
    "prospector[with_everything]",
]

readme = "README.rst"

[project.urls]
homepage = ""
documentation = ""
source = "https://github.com/bshakur8/obfuscator"
download = "https://github.com/bshakur8/obfuscator/releases"
tracker = "https://github.com/bshakur8/obfuscator/issues"


[tool.isort]
profile = "black"
multi_line_output = 3


[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
